Adding telepresence commands to Makefile

--- a/svctop/Makefile
+++ b/svctop/Makefile
@@ -1,25 +1,40 @@
+NAMESPACE ?= default
+SVC_NAME = svctop
+
 all: build
 
-clean:
-	-rm ./svctop ./svctop.linux
-	-docker rmi svctop:latest
+clean_local:
+	-rm ./$(SVC_NAME)
 
-local:
-	go build -o svctop
+clean: clean_local
+	-rm ./$(SVC_NAME).linux
+	-docker rmi $(SVC_NAME):latest
+
+local: clean_local
+	go build -o $(SVC_NAME)
 
 run_local: local
-	./svctop
+	./$(SVC_NAME)
 
 build_linux:
-	GOOS=linux GOARCH=amd64 go build -o svctop.linux
+	GOOS=linux GOARCH=amd64 go build -o $(SVC_NAME).linux
 
 build: build_linux
-	docker build -t svctop:latest .
+	docker build -t $(SVC_NAME):latest .
 
 deploy: clean build
-	helm upgrade --install svctop ./helm
+	helm -n $(NAMESPACE) upgrade --install $(SVC_NAME) ./helm
 
 undeploy:
-	helm uninstall svctop
+	helm -n $(NAMESPACE) uninstall $(SVC_NAME)
 
 reset: undeploy clean
+
+list:
+	telepresence -n $(NAMESPACE) list
+
+intercept:
+	telepresence -n $(NAMESPACE) intercept $(SVC_NAME) --port 8080:http
+
+leave:
+	telepresence leave $(SVC_NAME)-$(NAMESPACE)
